# airbyte-custom-connectors

./: .gitignore
.github/workflows/: build-custom-connector.yml
airbyte-integrations/connectors/source-icthealth/: README.md  main.py  metadata.yaml  pyproject.toml
airbyte-integrations/connectors/source-icthealth/integration_tests/: configured_catalog.json
airbyte-integrations/connectors/source-icthealth/source_icthealth/: __init__.py  run.py  source.py  spec.json
airbyte-integrations/connectors/source-icthealth/source_icthealth/schemas/: AppointmentDetails.json  ClinicEncounterData.json  RegisteredPatient.json
airbyte-integrations/connectors/source-zoho-creator/: .coveragerc  BOOTSTRAP.md  README.md  acceptance-test-config.yml  main.py  metadata.yaml  metadata.yml  pyproject.toml
airbyte-integrations/connectors/source-zoho-creator/integration_tests/: __init__.py  acceptance.py  integration_test.py  invalid_config.json  sample_config.json
airbyte-integrations/connectors/source-zoho-creator/sample_files/: sample_catalog.json  sample_configured_catalog.json
airbyte-integrations/connectors/source-zoho-creator/source_zoho_creator/: __init__.py  api.py  exceptions.py  run.py  source.py  spec.yaml  streams.py
airbyte-integrations/connectors/source-zoho-creator/unit_tests/: conftest.py  test_api.py  test_source.py  test_streams.py
airbyte-integrations/connectors/source-zoho-creator/unit_tests/integration/: __init__.py
airbyte-integrations/connectors/source-zoho-creator/unit_tests/resource/: __init__.py
(+5 files in other folders)
